[project]
name = "mnemonik-blogger"
version = "0.1.0"
description = "Content + multi-platform publishing agent for the Mnemonik protocol (Telegram, Discord, X, Farcaster)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "mnemonik-dev" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# X (Twitter) write access uses tweepy; kept optional so the core stays light.
twitter = ["tweepy>=4.14"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
mnemonik-blogger = "mnemonik_blogger.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemonik_blogger"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src"]
# pydantic-settings' BaseSettings resolves to Any under our import config; allow it.
disallow_subclassing_any = false

# typer's decorators are untyped; that shouldn't fail the typed CLI functions.
[[tool.mypy.overrides]]
module = "mnemonik_blogger.cli"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
